now displays the seed used

--- a/map_gen/templates/map_gen/map_generator.html
+++ b/map_gen/templates/map_gen/map_generator.html
@@ -13,71 +13,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<h1>{{}}</h1>
 <body>
-        <section class="commonNormalBoard board" id="board"><div class="normalBorderCommon border-normal">
-
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.0 }}" style="left:34.99655%;top:24.45%" id="tile-0" )="" alt="{{ resource_tiles_order.0 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-0"><div class="tile-chit-normal chit-number-base">{{ probabilities_order.0 }}</div><div class="prob-dots-base small-font-size-wrap">..<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.1 }}" style="left:50%;top:24.45%" id="tile-1" )="" alt="{{ resource_tiles_order.1 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-1"><div class="tile-chit-normal chit-number-base">9</div><div class="prob-dots-base small-font-size-wrap">....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.2 }}" style="left:65.00345%;top:24.45%" id="tile-2" )="" alt="{{ resource_tiles_order.2 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-2"><div class="tile-chit-normal chit-number-base">3</div><div class="prob-dots-base small-font-size-wrap">..<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.3 }}" style="left:27.494825000000002%;top:37.225%" id="tile-3" )="" alt="{{ resource_tiles_order.3 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-3"><div class="tile-chit-normal chit-number-base">11</div><div class="prob-dots-base small-font-size-wrap">..<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.4 }}" style="left:42.498275%;top:37.225%" id="tile-4" )="" alt="{{ resource_tiles_order.4 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-4"><div class="tile-chit-normal chit-number-base">12</div><div class="prob-dots-base small-font-size-wrap">.<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.5 }} high-prob" style="left:57.501725%;top:37.225%" id="tile-5" )="" alt="{{ resource_tiles_order.5 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-5"><div class="tile-chit-normal chit-number-base">8</div><div class="prob-dots-base small-font-size-wrap">.....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.6 }}" style="left:72.505175%;top:37.225%" id="tile-6" )="" alt="{{ resource_tiles_order.6 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-6"><div class="tile-chit-normal chit-number-base">9</div><div class="prob-dots-base small-font-size-wrap">....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.7 }}" style="left:19.993100000000002%;top:50%" id="tile-7" )="" alt="{{ resource_tiles_order.7 }}">
-            <div class="circle-normal circle-base font-size-wrap desert-chit" id="circle-7"><div class="tile-chit-normal chit-number-base"></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.8 }} high-prob" style="left:34.99655%;top:50%" id="tile-8" )="" alt="{{ resource_tiles_order.8 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-8"><div class="tile-chit-normal chit-number-base">6</div><div class="prob-dots-base small-font-size-wrap">.....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.9 }}" style="left:50%;top:50%" id="tile-9" )="" alt="{{ resource_tiles_order.9 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-9"><div class="tile-chit-normal chit-number-base">5</div><div class="prob-dots-base small-font-size-wrap">....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.10 }}" style="left:65.00345%;top:50%" id="tile-10" )="" alt="{{ resource_tiles_order.10 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-10"><div class="tile-chit-normal chit-number-base">10</div><div class="prob-dots-base small-font-size-wrap">...<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.11 }} high-prob" style="left:80.0069%;top:50%" id="tile-11" )="" alt="{{ resource_tiles_order.11 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-11"><div class="tile-chit-normal chit-number-base">8</div><div class="prob-dots-base small-font-size-wrap">.....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.12 }}" style="left:27.494825000000002%;top:62.775%" id="tile-12" )="" alt="{{ resource_tiles_order.12 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-12"><div class="tile-chit-normal chit-number-base">5</div><div class="prob-dots-base small-font-size-wrap">....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.13 }}" style="left:42.498275%;top:62.775%" id="tile-13" )="" alt="{{ resource_tiles_order.13 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-13"><div class="tile-chit-normal chit-number-base">10</div><div class="prob-dots-base small-font-size-wrap">...<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.14 }}" style="left:57.501725%;top:62.775%" id="tile-14" )="" alt="{{ resource_tiles_order.14 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-14"><div class="tile-chit-normal chit-number-base">2</div><div class="prob-dots-base small-font-size-wrap">.<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.15 }}" style="left:72.505175%;top:62.775%" id="tile-15" )="" alt="{{ resource_tiles_order.15 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-15"><div class="tile-chit-normal chit-number-base">4</div><div class="prob-dots-base small-font-size-wrap">...<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.16 }}" style="left:34.99655%;top:75.55%" id="tile-16" )="" alt="{{ resource_tiles_order.16 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-16"><div class="tile-chit-normal chit-number-base">11</div><div class="prob-dots-base small-font-size-wrap">..<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.17 }} high-prob" style="left:50%;top:75.55%" id="tile-17" )="" alt="{{ resource_tiles_order.17 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-17"><div class="tile-chit-normal chit-number-base">6</div><div class="prob-dots-base small-font-size-wrap">.....<div></div></div></div>
-        
-        </div><div class="hex-normal hex-base {{ resource_tiles_order.18 }}" style="left:65.00345%;top:75.55%" id="tile-18" )="" alt="{{ resource_tiles_order.18 }}">
-            <div class="circle-normal circle-base font-size-wrap" id="circle-18"><div class="tile-chit-normal chit-number-base">4</div><div class="prob-dots-base small-font-size-wrap">...<div></div></div></div>
-        
-        </div></section>
-            </div>
-        </section>
-    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <header class="goodHeader">
+        <h1 class="px-2 py-2">Catan Board Generator</h1>
+        <p class="px-2 py-2">Seed: {{ seed }}</p>
+    </header>
+    <section class="commonNormalBoard board" id="board">
+        <div class="normalBorderCommon border-normal"></div>
+        {% for tile in tile_data %}
+            {% if tile.2 == "....." %}
+                <div class="hex-normal hex-base {{ tile.0 }} high-prob" style="{{ tile.3 }}">
+            {% else %}
+                <div class="hex-normal hex-base {{ tile.0 }}" style="{{ tile.3 }}">
+            {% endif %}
+                    {% if tile.0 == "desert" %}
+                        <div class="circle-normal circle-base font-size-wrap desert-chit"><div class="tile-chit-normal chit-number-base">{{ tile.1 }}</div><div class="prob-dots-base small-font-size-wrap">{{ tile.2 }}<div></div></div></div></div></div>
+                    {% else %}
+                        <div class="circle-normal circle-base font-size-wrap"><div class="tile-chit-normal chit-number-base">{{ tile.1 }}</div><div class="prob-dots-base small-font-size-wrap">{{ tile.2 }}<div></div></div></div></div></div>
+                    {% endif %}
+        {% endfor %}
+    </section>
 </body>
